--- a/Refactoring3/Refactoring3/Refactoring3.csproj
+++ b/Refactoring3/Refactoring3/Refactoring3.csproj
@@ -71,6 +71,25 @@
     <Compile Include="Aula3\R52.ReplaceErrorCodeWithException\depois\ContaBancaria.cs" />
     <Compile Include="Aula3\R53.ReplaceExceptionwithTest\antes\ContaCorrente.cs" />
     <Compile Include="Aula3\R53.ReplaceExceptionwithTest\depois\ContaCorrente.cs" />
+    <Compile Include="Aula4\R54.PullUpMethod\antes\Cliente.cs" />
+    <Compile Include="Aula4\R54.PullUpMethod\depois\Cliente.cs" />
+    <Compile Include="Aula4\R55.PullUpConstructorBody\antes\Cliente.cs" />
+    <Compile Include="Aula4\R55.PullUpConstructorBody\depois\Cliente.cs" />
+    <Compile Include="Aula4\R56.PushDownMethod\antes\Funcionario.cs" />
+    <Compile Include="Aula4\R56.PushDownMethod\depois\Funcionario.cs" />
+    <Compile Include="Aula4\R57.PushDownField\antes\Funcionario.cs" />
+    <Compile Include="Aula4\R57.PushDownField\depois\Funcionario.cs" />
+    <Compile Include="Aula5\R58.ExtractSubclass\antes\ItemDeServico.cs" />
+    <Compile Include="Aula5\R58.ExtractSubclass\depois\ItemDeServico.cs" />
+    <Compile Include="Aula5\R59.ExtractSuperclass\antes\NotasFiscais.cs" />
+    <Compile Include="Aula5\R59.ExtractSuperclass\depois\NotasFiscais.cs" />
+    <Compile Include="Aula5\R60.ExtractInterface\antes\CNPJFormatter.cs" />
+    <Compile Include="Aula5\R60.ExtractInterface\antes\CPFFormatter.cs" />
+    <Compile Include="Aula5\R60.ExtractInterface\antes\Program.cs" />
+    <Compile Include="Aula5\R60.ExtractInterface\depois\CNPJFormatter.cs" />
+    <Compile Include="Aula5\R60.ExtractInterface\depois\CPFFormatter.cs" />
+    <Compile Include="Aula5\R60.ExtractInterface\depois\IFormatter.cs" />
+    <Compile Include="Aula5\R60.ExtractInterface\depois\Program.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -98,6 +117,16 @@
     <Content Include="Aula3\R52.ReplaceErrorCodeWithException\depois\ReplaceErrorCodeWithException2.png" />
     <Content Include="Aula3\R53.ReplaceExceptionwithTest\antes\antes.png" />
     <Content Include="Aula3\R53.ReplaceExceptionwithTest\depois\depois.png" />
+    <Content Include="Aula4\R54.PullUpMethod\antes\PullUpMethod.png" />
+    <Content Include="Aula4\R54.PullUpMethod\depois\PullUpMethod2.png" />
+    <Content Include="Aula4\R56.PushDownMethod\antes\PushDownMethod.png" />
+    <Content Include="Aula4\R56.PushDownMethod\depois\PushDownMethod2.png" />
+    <Content Include="Aula4\R57.PushDownField\antes\PushDownField.png" />
+    <Content Include="Aula4\R57.PushDownField\depois\PushDownField2.png" />
+    <Content Include="Aula5\R58.ExtractSubclass\antes\ExtractSubclass.png" />
+    <Content Include="Aula5\R58.ExtractSubclass\depois\ExtractSubclass2.png" />
+    <Content Include="Aula5\R59.ExtractSuperclass\antes\antes.png" />
+    <Content Include="Aula5\R59.ExtractSuperclass\depois\depois.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
