--- a/Refactoring3/Refactoring3/Refactoring3.csproj
+++ b/Refactoring3/Refactoring3/Refactoring3.csproj
@@ -90,6 +90,14 @@
     <Compile Include="Aula5\R60.ExtractInterface\depois\CPFFormatter.cs" />
     <Compile Include="Aula5\R60.ExtractInterface\depois\IFormatter.cs" />
     <Compile Include="Aula5\R60.ExtractInterface\depois\Program.cs" />
+    <Compile Include="Aula6\R61.CollapseHierarchy\antes\Funcionario.cs" />
+    <Compile Include="Aula6\R61.CollapseHierarchy\depois\Funcionario.cs" />
+    <Compile Include="Aula6\R62.FormTemplateMethod\antes\Customer.cs" />
+    <Compile Include="Aula6\R62.FormTemplateMethod\depois\Customer.cs" />
+    <Compile Include="Aula6\R63.ReplaceInheritanceWithDelegation\antes\Imovel.cs" />
+    <Compile Include="Aula6\R63.ReplaceInheritanceWithDelegation\depois\Imovel.cs" />
+    <Compile Include="Aula6\R64.ReplaceDelegationWithInheritance\antes\Imovel.cs" />
+    <Compile Include="Aula6\R64.ReplaceDelegationWithInheritance\depois\Imovel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -127,6 +135,10 @@
     <Content Include="Aula5\R58.ExtractSubclass\depois\ExtractSubclass2.png" />
     <Content Include="Aula5\R59.ExtractSuperclass\antes\antes.png" />
     <Content Include="Aula5\R59.ExtractSuperclass\depois\depois.png" />
+    <Content Include="Aula6\R63.ReplaceInheritanceWithDelegation\antes\ReplaceInheritanceWithDelegation.png" />
+    <Content Include="Aula6\R63.ReplaceInheritanceWithDelegation\depois\ReplaceInheritanceWithDelegation2.png" />
+    <Content Include="Aula6\R64.ReplaceDelegationWithInheritance\antes\ReplaceDelegationWithInheritance.png" />
+    <Content Include="Aula6\R64.ReplaceDelegationWithInheritance\depois\ReplaceDelegationWithInheritance2.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
